--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,60 @@
 
 	<dependencies>
 	<!-- 添加zrq -->
+	<!-- word转pdf依赖 -->
+	<!-- https://mvnrepository.com/artifact/fr.opensagres.xdocreport/org.apache.poi.xwpf.converter.core -->
+	<dependency>
+	    <groupId>fr.opensagres.xdocreport</groupId>
+	    <artifactId>org.apache.poi.xwpf.converter.core</artifactId>
+	    <version>1.0.6</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/fr.opensagres.xdocreport/org.apache.poi.xwpf.converter.xhtml -->
+	<dependency>
+	    <groupId>fr.opensagres.xdocreport</groupId>
+	    <artifactId>org.apache.poi.xwpf.converter.xhtml</artifactId>
+	    <version>1.0.6</version>
+	</dependency>
+	<dependency>
+            <groupId>fr.opensagres.xdocreport</groupId>
+            <artifactId>org.apache.poi.xwpf.converter.pdf</artifactId>
+            <version>1.0.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.15</version>
+        </dependency>
+	<dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.15</version>
+        </dependency>
+     <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml-schemas</artifactId>
+            <version>3.15</version>
+        </dependency>
+     <dependency>
+		<groupId>org.apache.poi</groupId>
+		<artifactId>ooxml-schemas</artifactId>
+		<version>1.3</version>
+	</dependency>
+	  <dependency>
+           <groupId>org.apache.poi</groupId>
+           <artifactId>poi-scratchpad</artifactId>
+           <version>3.15</version>
+      </dependency>
+     <dependency>
+	    <groupId>commons-io</groupId>
+	    <artifactId>commons-io</artifactId>
+	    <version>2.4</version>
+	 </dependency>
+     <!--  -->
+ 		
+	
+	
+	<!--  -->
+	
 	<!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-jdbc -->
 	<dependency>
 	    <groupId>org.apache.tomcat</groupId>
@@ -33,29 +87,9 @@
 	    <artifactId>commons-collections4</artifactId>
 	    <version>4.1</version>
 	</dependency>
-	<dependency>
-            <groupId>org.apache.poi</groupId>
-            <artifactId>poi</artifactId>
-            <version>3.17</version>
-        </dependency>
-	<dependency>
-            <groupId>org.apache.poi</groupId>
-            <artifactId>poi-ooxml</artifactId>
-            <version>3.17</version>
-        </dependency>
-       <dependency>
-            <groupId>org.apache.poi</groupId>
-            <artifactId>poi-ooxml-schemas</artifactId>
-            <version>3.17</version>
-        </dependency>
-        
-	<dependency>
-           <groupId>org.apache.poi</groupId>
-           <artifactId>poi-scratchpad</artifactId>
-           <version>3.8</version>
-      </dependency>
+	
        <!-- https://mvnrepository.com/artifact/org.apache.xmlbeans/xmlbeans -->
-	<dependency>
+	<!-- <dependency>
 	    <groupId>org.apache.xmlbeans</groupId>
 	    <artifactId>xmlbeans</artifactId>
 	    <version>2.6.0</version>
@@ -64,13 +98,9 @@
 		<groupId>com.google.guava</groupId>
 		<artifactId>guava</artifactId>
 		<version>16.0.1</version>
-		<!--<version>16.0.1</version>-->
-	</dependency>
-	<dependency>
-		<groupId>org.apache.poi</groupId>
-		<artifactId>ooxml-schemas</artifactId>
-		<version>1.3</version>
-	</dependency>
+		<version>16.0.1</version>
+	</dependency> -->
+	
 	<!-- end -->
 
 		<dependency>
